--- a/cmd/boltqap/templates/definitions.tmpl
+++ b/cmd/boltqap/templates/definitions.tmpl
@@ -16,10 +16,12 @@
         <form action="/qap/search">
             <input type="text" name="Query" placeholder="Search..">
         </form>
-      </div>
+    </div>
+    <main>
 {{end}}
 
 {{define "footer"}}
+  </main>
   <footer>
     <p>
       Copyright 2022 - go-qap
