--- a/cmd/boltqap/templates/style.css
+++ b/cmd/boltqap/templates/style.css
@@ -3,6 +3,13 @@ main {
     padding: 5px;
 }
 
+div.revision {
+    border: 2px solid black;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 form.main {
     border: 2px solid black;
     margin: 10px;
