fix FindDocuments bug. was using qap.HeaderCodesEqual

--- a/cmd/boltqap/templates/document.tmpl
+++ b/cmd/boltqap/templates/document.tmpl
@@ -26,7 +26,7 @@
     <p>{{.Description}}</p>
 </div>
 {{else}}
-<p><strong>rev A.1-draft</strong></p>
+<p><strong>rev A.1-draft</strong> (default)</p>
 {{end}}
 
 {{if eq .Attachment 0}}
