--- a/cmd/boltqap/templates/definitions.tmpl
+++ b/cmd/boltqap/templates/definitions.tmpl
@@ -4,7 +4,7 @@
 <head>
     <title>BoltQAP</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
-    <link rel="stylesheet" href="assets/css/dark-theme.css">
+    <!-- <link rel="stylesheet" href="assets/css/dark-theme.css"> -->
     <style>
        {{template "style.css"}}
     </style>
