add project structure

--- a/cmd/boltqap/templates/document.tmpl
+++ b/cmd/boltqap/templates/document.tmpl
@@ -3,6 +3,7 @@
 <p>Filename: <span style="color:rgb(1, 96, 11)">{{.Filename}}</span></p>
 <p>Legacy filename: <span style="color:brown">{{.LegacyName}}</span></p>
 
+<p><a href="/qap/structure?project={{.Project}}">See project structure</a></p>
 <p>Submitted by <strong>{{.SubmittedBy}}</strong></p>
 <p>File extension: {{.FileExtension}}</p>
 <p>Location: {{.Location}}</p>
