--- a/cmd/boltqap/templates/project.tmpl
+++ b/cmd/boltqap/templates/project.tmpl
@@ -1,3 +1,62 @@
 {{template "header"}}
+<h1>{{.}} Project Structure</h1>
+<p><strong>{{.Description}}</strong></p>
+{{$project := .Project}}
+<form class="main" action="">
+    <strong>Add System to {{.}}:</strong>
+    <input type="hidden" name="project" value="{{$project}}">
+    <input type="hidden" name="accum" value="">
+    <label for="newcode">Single-letter system code</label>
+    <input name="newcode" type="text" placeholder="M" autocomplete="off">
+    <label for="name">System name</label>
+    <input name="name" type="text" placeholder="Engine+actuator" autocomplete="off">
+    <label for="desc">Description</label>
+    <input name="desc" type="text" placeholder="Engines and actuators" autocomplete="off">
+    <input type="submit">
+</form>
+<div style="margin:2rem;">
+{{range .Systems}}
+    {{$accum := .Letter}}
+    <h2>{{$accum}} - {{.}}</h2>
+    <form class="main">
+        <strong>Add Family to {{.}}:</strong>
+        <input type="hidden" name="project" value="{{$project}}">
+        <input type="hidden" name="accum" value="{{$accum}}">
+        <label for="newcode">Single-letter family code</label>
+        <input name="newcode" type="text" placeholder="V" autocomplete="off">
+        <label for="name">Family name</label>
+        <input name="name" type="text" placeholder="Vac" autocomplete="off">
+        <label for="desc">Family Description</label>
+        <input name="desc" type="text" placeholder="Vacuum rated rocket engines." autocomplete="off">
+        <input type="submit">
+    </form>
+    <div style="margin-left:20px;">
+    {{range .Families}}
+        {{$accum := cat $accum .Letter}}
+        <h3>{{$accum}} - {{.}}</h3>
+        <form class="main">
+            <strong>Add Type to {{.}}:</strong>
+            <input type="hidden" name="project" value="{{$project}}">
+            <input type="hidden" name="accum" value="{{$accum}}">
+            <label for="code">Single-letter type code</label>
+            <input name="code" type="text" placeholder="R" autocomplete="off">
+            <label for="name">Type name</label>
+            <input name="name" type="text" placeholder="Raptor" autocomplete="off">
+            <label for="desc">Description</label>
+            <input name="desc" type="text" placeholder="Raptor series engines" autocomplete="off">
+            <input type="submit">
+        </form>
+        <div style="margin-left:20px;">
+        {{range .Types}}
+            {{$accum := cat $accum .Letter}}
+            <h4>{{$accum}} - {{.}}</h4>
+        {{end}}
+        </div>
+    {{end}}
+    </div>
+{{end}}
+</div>
+
+{{template "qap-help"}}
 
 {{template "footer"}}
