fix structure bugs

--- a/cmd/boltqap/templates/landing.tmpl
+++ b/cmd/boltqap/templates/landing.tmpl
@@ -9,7 +9,7 @@
 <form class="main" action="/qap/addDocument">
    <h3>New Document</h3>
    <label for="Code">Document Codes:</label>
-   <input type="text" name="Code" placeholder="SPS-HC12-HP">
+   <input type="text" name="Code" placeholder="LHC-HCF-HP">
    <label for="HumanName">Human Name:</label>
    <input type="text" id="HumanName" name="HumanName" placeholder="Thingy version 2-final-Last.docx">
    <label for="SubmittedBy">Submitted by:</label>
