--- a/cmd/boltqap/templates/style.css
+++ b/cmd/boltqap/templates/style.css
@@ -56,6 +56,10 @@ form.main {
     font-size: 17px;
 }
 
+p.description {
+    font-size: larger;
+}
+
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
 
