add service status check handle to boltqap

--- a/cmd/boltqap/templates/document.tmpl
+++ b/cmd/boltqap/templates/document.tmpl
@@ -21,7 +21,9 @@
     <label for="rev">Index:</label>
     <input type="text" name="rev" placeholder="i.e: A.2, or B.3-draft">
     <label for="desc">Short description of changes:</label>
-    <input type="text" name="desc" placeholder="Minor changes to part">
+    <textarea name="desc" placeholder="Minor changes to part" rows="4" cols="50">
+    </textarea>
+    <!-- <input type="text" name="desc" placeholder="Minor changes to part"> -->
     <label for="draft">Is approved/release:</label>
     <input type="checkbox" name="isrelease">
     <input type="submit">
